fixed everything that I broke

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                        class="btn btn-success"
                        value="Start"
                        tabindex="0"
-                       onclick="WeirdOS.Control.hostBtnStartOS_click(this);">
+                       onclick="TSOS.Control.hostBtnStartOS_click(this);">
 
                 <input type="button"
                        id = "btnHaltOS"
@@ -67,7 +67,7 @@
                        disabled="disabled"
                        value="Halt"
                        tabindex="1"
-                       onclick="WeirdOS.Control.hostBtnHaltOS_click(this);">
+                       onclick="TSOS.Control.hostBtnHaltOS_click(this);">
 
                 <input type="button"
                        id = "btnReset"
@@ -76,7 +76,7 @@
                        disabled="disabled"
                        value="Reset"
                        tabindex="2"
-                       onclick="WeirdOS.Control.hostBtnReset_click(this);">
+                       onclick="TSOS.Control.hostBtnReset_click(this);">
                 <span class="label label-default" id="status">Active</span>
                 <span class="label label-default" id="dateBadge">today</span>
             </div>
