--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-4">
-            <div class="panel panel-default">
+            <div class="panel panel-default" id="consolePanel">
                 <div class="panel-heading">
                     Console
                 </div>
