I just got trolled by my own ad-blocker. Hopefully images will show up now.

--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@
         </div>
     </div>
 
-    <div class="ad" id="ad-right" hidden>
+    <div class="gamify-img" id="ad-right" hidden>
         <img src="distrib/images/spectre-ad.jpg" alt="spectre"/>
     </div>
-    <div class="ad" id="ad-botright" hidden>
+    <div class="gamify-img" id="ad-botright" hidden>
         <img src="distrib/images/lotus-ad.jpg" alt="lotus"/>
     </div>
 
