SCREENSHAKE (I'm so sorry)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Globals CONSTANTS and _Variables. Must included be first. -->
     <script src="distrib/js/jquery-1.11.3.min.js"></script>
     <script src="distrib/js/bootstrap.min.js"></script>
+    <script src="distrib/js/smart-ui.js"></script>
 
     <script type="text/javascript" src="distrib/globals.js"></script>
 
