--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <!-- Globals CONSTANTS and _Variables. Must included be first. -->
     <script src="distrib/js/jquery-1.11.3.min.js"></script>
     <script src="distrib/js/bootstrap.min.js"></script>
-    <script src="distrib/js/smart-ui.js"></script>
 
     <script type="text/javascript" src="distrib/globals.js"></script>
 
@@ -24,6 +23,7 @@
     <script type="text/javascript" src="distrib/host/devices.js"></script>
     <script type="text/javascript" src="distrib/host/cpu.js"></script>
     <script type="text/javascript" src="distrib/host/mainMemory.js"></script>
+    <script type="text/javascript" src="distrib/host/hdd.js"></script>
 
     <!-- Virtual OS Routines: Make sure Kernel code is last, since it needs those above it. -->
     <script type="text/javascript" src="distrib/os/interrupt.js"></script>
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="distrib/os/console.js"></script>
     <script type="text/javascript" src="distrib/os/deviceDriver.js"></script>
     <script type="text/javascript" src="distrib/os/deviceDriverKeyboard.js"></script>
+    <script type="text/javascript" src="distrib/os/deviceDriverFileSystem.js"></script>
     <script type="text/javascript" src="distrib/os/queue.js"></script>
     <script type="text/javascript" src="distrib/os/shell.js"></script>
     <script type="text/javascript" src="distrib/os/shellCommand.js"></script>
@@ -44,7 +45,7 @@
     <!-- Other Routines -->
     <script type="text/javascript" src="distrib/utils.js"></script>
     <!-- Uncomment this line below to enable GLaDOS testing -->
-    <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>
+    <!-- <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script> -->
 </head>
 
 <body onload="onDocumentLoad()">
