--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script type="text/javascript" src="distrib/os/userCommand.js"></script>
     <script type="text/javascript" src="distrib/os/kernel.js"></script>
     <script type="text/javascript" src="distrib/os/pcb.js"></script>
+    <script type="text/javascript" src="distrib/os/TSB.js"></script>
 
     <script type="text/javascript" src="distrib/os/processManager.js"></script>
     <script type="text/javascript" src="distrib/os/memoryManager.js"></script>
@@ -54,7 +55,7 @@
 
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">WeirdOS</a>
+            <a class="navbar-brand" href="index.html">Weird<strong>OS</strong></a>
         </div>
     </nav>
 
