Added HDD table to index.html

--- a/index.html
+++ b/index.html
@@ -252,6 +252,16 @@
                     </tbody>
                 </table>
             </div>
+            <div class="panel panel-default" id="divHdd">
+                <div class="panel-heading">
+                    <h6 class="panel-title">Hard Drive</h6>
+                </div>
+                <div class="panel-body">
+                    <table class="table">
+                        <tbody id="hddTable">
+                        </tbody>
+                    </table>
+                </div>
         </div>
     </div>
 
